// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSocketServerImplementation util should throw with serverMode (bad path) 1`] = `[Error: serverMode must be a string denoting a default implementation (e.g. 'sockjs'), a full path to a JS file which exports a class extending BaseServer (webpack-dev-server/lib/servers/BaseServer) via require.resolve(...), or the class itself which extends BaseServer]`;

exports[`getSocketServerImplementation util should throw with serverMode (no close, onConnection methods) 1`] = `
[ValidationError: webpack Dev Server Invalid Options

options - serverMode must have a close(connection) method that closes the provided client connection object
options - serverMode must have a onConnection(f) method that calls f(connection) whenever a new client connection is made
]
`;

exports[`getSocketServerImplementation util should throw with serverMode (no constructor, send, close, onConnection methods) 1`] = `
[ValidationError: webpack Dev Server Invalid Options

options [object Object]
options - serverMode must have a send(connection, message) method that sends the message string to the provided client connection object
options - serverMode must have a close(connection) method that closes the provided client connection object
options - serverMode must have a onConnection(f) method that calls f(connection) whenever a new client connection is made
]
`;

exports[`getSocketServerImplementation util should throw with serverMode (no onConnection method) 1`] = `
[ValidationError: webpack Dev Server Invalid Options

options - serverMode must have a onConnection(f) method that calls f(connection) whenever a new client connection is made
]
`;

exports[`getSocketServerImplementation util should throw with serverMode (no send, close, onConnection methods) 1`] = `
[ValidationError: webpack Dev Server Invalid Options

options - serverMode must have a send(connection, message) method that sends the message string to the provided client connection object
options - serverMode must have a close(connection) method that closes the provided client connection object
options - serverMode must have a onConnection(f) method that calls f(connection) whenever a new client connection is made
]
`;
